--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,25 +3,16 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: suhwpark <suhwpark@student.42.fr>          +#+  +:+       +#+         #
+#    By: yongmipa <yongmipa@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/07/17 19:56:17 by yongmipa          #+#    #+#              #
-#    Updated: 2023/03/09 21:09:37 by suhwpark         ###   ########.fr        #
+#    Updated: 2023/03/13 17:29:00 by yongmipa         ###   ########seoul.kr   #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libft.a
 CC = cc
 FLAGS = -Wall -Wextra -Werror
-BSRCS = ft_lstnew.c \
-       ft_lstadd_front.c \
-       ft_lstsize.c \
-       ft_lstlast.c \
-       ft_lstadd_back.c \
-       ft_lstdelone.c \
-       ft_lstclear.c \
-       ft_lstiter.c \
-       ft_lstmap.c
 SRCS = ft_memcmp.c ft_memmove.c ft_bzero.c ft_memchr.c ft_memcpy.c \
        ft_memset.c ft_strlen.c ft_strlcpy.c ft_strlcat.c ft_strchr.c \
        ft_strrchr.c ft_strnstr.c ft_strncmp.c ft_atoi.c ft_isalpha.c \
@@ -29,7 +20,16 @@ SRCS = ft_memcmp.c ft_memmove.c ft_bzero.c ft_memchr.c ft_memcpy.c \
        ft_tolower.c ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c \
        ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_striteri.c \
        ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c  ft_safe_malloc.c \
-       ft_free.c ft_strcmp.c
+       ft_lstnew.c \
+       ft_lstadd_front.c \
+       ft_lstsize.c \
+       ft_lstlast.c \
+       ft_lstadd_back.c \
+       ft_lstdelone.c \
+       ft_lstclear.c \
+       ft_lstiter.c \
+       ft_lstmap.c \
+       ft_free.c ft_strcmp.c get_next_line.c get_next_line_utils.c
 OBJS = $(SRCS:%.c=%.o)
 BOBJS = $(BSRCS:%.c=%.o)
 ifdef WITH_BONUS
